# GEO-projekat

./: .gitignore  README.md  create_schema.py  crud.py  dataframes.py  db.py  geo_app.py  geo_download.py  main.py  pyproject.toml  queries.py  schema.sql  seed_data.py
deo1/: add_spots.py  add_zones.py  create_schema.py  crud.py  dataframes.py  main.py  queries.py  reset_spots.py  schema.sql  seed_data.py
deo2/: geo_app.py  geo_download.py
deo3/: ml_app.py  ml_detect.py  schema_ml.sql
