[project]
name = "parking"
version = "0.1.0"
description = "Pametni sistem za upravljanje parking mestima (PostgreSQL/PostGIS + GEO + ML)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "geopandas>=1.0.0",
    "folium>=0.18.0",
    "streamlit>=1.40.0",
    "streamlit-folium>=0.23.0",
    "contextily>=1.6.0",
    "matplotlib>=3.9.0",
    "shapely>=2.0.0",
    "requests>=2.32.0",
    "pyproj>=3.6.0",
    "ultralytics>=8.3.0",
    "opencv-python>=4.8.0",
    "scikit-learn>=1.5.0",
    "fpdf2>=2.8.7",
    "pymupdf>=1.28.0",
]
